// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appearance Settings should disable form when profile is not restored yet 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 gqEtOc"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 bDoEXD flex w-12"
        >
          <div
            class="sc-bdfBwQ eZRpTZ mx-auto"
            height="10"
            width="10"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bQNieu"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 izugbJ group"
                  >
                    <button
                      class="OriginalButton__StyledButton-o0fs2j-0 gAvGnc"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 izugbJ"
              >
                <button
                  class="OriginalButton__StyledButton-o0fs2j-0 gAvGnc"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 izugbJ"
              >
                <button
                  class="OriginalButton__StyledButton-o0fs2j-0 gAvGnc"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ehnmnK flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex flex-1"
      >
        <div
          class="container flex mx-auto"
        >
          <div
            class="px-12 my-8 border-r border-theme-primary-100 dark:border-theme-secondary-800"
          >
            <div
              class="SideBar__SideBarContainer-sc-1wg5vvh-0 gYNuec"
            >
              <ul>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--general"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center"
                  >
                    <div
                      class="mr-3 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings-horizontal.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      General
                    </span>
                  </li>
                </div>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--password"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center"
                  >
                    <div
                      class="mr-3 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          lock.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      Password
                    </span>
                  </li>
                </div>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--export"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center"
                  >
                    <div
                      class="mr-3 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          export.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      Export
                    </span>
                  </li>
                </div>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--appearance"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center text-theme-primary-600 dark:text-theme-secondary-200 bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <div
                      class="absolute top-0 bottom-0 left-0 w-2 rounded bg-theme-primary-600"
                    />
                    <div
                      class="mr-3"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          appearance.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      Appearance
                    </span>
                  </li>
                </div>
              </ul>
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="Section__SectionWrapper-plnv9l-0 hMcwPe"
            >
              <div
                class="container px-10 mx-auto px-12"
              >
                <div
                  class="flex justify-between items-end bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Appearance
                    </h1>
                    <div
                      class="text-theme-secondary-text"
                      data-testid="header__subtitle"
                    >
                      Customize the look of the application.
                    </div>
                  </div>
                </div>
                <section
                  class="mt-8"
                  data-testid="AppearanceFormPlaceholder"
                >
                  <ul
                    class="sc-hKgILt gfmZFQ"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex flex-col w-full pb-6"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col space-y-2 w-full"
                        >
                          <div
                            class="flex justify-between items-center space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Accent Color
                            </span>
                          </div>
                          <span
                            class="text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700"
                            data-testid="list-divided-item__label--description"
                          >
                            Choose a color for buttons and other wallet features.
                          </span>
                        </div>
                        <div
                          class=""
                        >
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <div
                              class="inline-flex items-center space-x-3 w-full"
                              data-testid="ButtonGroup"
                              role="radiogroup"
                            >
                              <button
                                aria-checked="false"
                                aria-label="Blue"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                disabled=""
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="w-5 h-5 mx-1 rounded bg-theme-info-600"
                                />
                              </button>
                              <button
                                aria-checked="false"
                                aria-label="Green"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                disabled=""
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="w-5 h-5 mx-1 rounded bg-theme-success-600"
                                />
                              </button>
                            </div>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex flex-col w-full pt-6"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col space-y-2 w-full"
                        >
                          <div
                            class="flex justify-between items-center space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Viewing Mode
                            </span>
                          </div>
                          <span
                            class="text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700"
                            data-testid="list-divided-item__label--description"
                          >
                            Choose a light or dark viewing mode.
                          </span>
                        </div>
                        <div
                          class=""
                        >
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <div
                              class="inline-flex items-center space-x-3 w-full"
                              data-testid="ButtonGroup"
                              role="radiogroup"
                            >
                              <button
                                aria-checked="false"
                                aria-label="light"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                disabled=""
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="flex items-center space-x-2 px-2"
                                >
                                  <div
                                    class="sc-bdfBwQ hjDozt dark:text-theme-secondary-600"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      light.svg
                                    </svg>
                                  </div>
                                  <span>
                                    Light
                                  </span>
                                </div>
                              </button>
                              <button
                                aria-checked="false"
                                aria-label="dark"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                disabled=""
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="flex items-center space-x-2 px-2"
                                >
                                  <div
                                    class="sc-bdfBwQ hjDozt dark:text-theme-secondary-600"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      dark.svg
                                    </svg>
                                  </div>
                                  <span>
                                    Dark
                                  </span>
                                </div>
                              </button>
                            </div>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="flex justify-end mt-8 space-x-3 w-full"
                  >
                    <button
                      class="OriginalButton__StyledButton-o0fs2j-0 guPjPB"
                      data-testid="AppearanceFooterButtons__cancel"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="OriginalButton__StyledButton-o0fs2j-0 jmXqYL"
                      data-testid="AppearanceFooterButtons__save"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Appearance Settings should render appearance settings 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 gqEtOc"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 bDoEXD flex w-12"
        >
          <div
            class="sc-bdfBwQ eZRpTZ mx-auto"
            height="10"
            width="10"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bQNieu"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 izugbJ group"
                  >
                    <button
                      class="OriginalButton__StyledButton-o0fs2j-0 gAvGnc"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 izugbJ"
              >
                <button
                  class="OriginalButton__StyledButton-o0fs2j-0 gAvGnc"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 izugbJ"
              >
                <button
                  class="OriginalButton__StyledButton-o0fs2j-0 gAvGnc"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ehnmnK flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex flex-1"
      >
        <div
          class="container flex mx-auto"
        >
          <div
            class="px-12 my-8 border-r border-theme-primary-100 dark:border-theme-secondary-800"
          >
            <div
              class="SideBar__SideBarContainer-sc-1wg5vvh-0 gYNuec"
            >
              <ul>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--general"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center"
                  >
                    <div
                      class="mr-3 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          settings-horizontal.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      General
                    </span>
                  </li>
                </div>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--password"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center"
                  >
                    <div
                      class="mr-3 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          lock.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      Password
                    </span>
                  </li>
                </div>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--export"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center"
                  >
                    <div
                      class="mr-3 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          export.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      Export
                    </span>
                  </li>
                </div>
                <div
                  class="relative cursor-pointer"
                  data-testid="side-menu__item--appearance"
                >
                  <li
                    class="rounded py-5 pl-10 pr-8 h-15 flex items-center text-theme-primary-600 dark:text-theme-secondary-200 bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <div
                      class="absolute top-0 bottom-0 left-0 w-2 rounded bg-theme-primary-600"
                    />
                    <div
                      class="mr-3"
                    >
                      <div
                        class="sc-bdfBwQ hjDozt"
                        height="20"
                        width="20"
                      >
                        <svg>
                          appearance.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="text-lg font-semibold"
                    >
                      Appearance
                    </span>
                  </li>
                </div>
              </ul>
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="Section__SectionWrapper-plnv9l-0 hMcwPe"
            >
              <div
                class="container px-10 mx-auto px-12"
              >
                <div
                  class="flex justify-between items-end bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Appearance
                    </h1>
                    <div
                      class="text-theme-secondary-text"
                      data-testid="header__subtitle"
                    >
                      Customize the look of the application.
                    </div>
                  </div>
                </div>
                <form
                  class="mt-8"
                  data-testid="AppearanceForm"
                >
                  <ul
                    class="sc-hKgILt gfmZFQ"
                    data-testid="list-divided__items"
                  >
                    <li
                      class="flex flex-col w-full pb-6"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col space-y-2 w-full"
                        >
                          <div
                            class="flex justify-between items-center space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Accent Color
                            </span>
                          </div>
                          <span
                            class="text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700"
                            data-testid="list-divided-item__label--description"
                          >
                            Choose a color for buttons and other wallet features.
                          </span>
                        </div>
                        <div
                          class=""
                        >
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <div
                              class="inline-flex items-center space-x-3 w-full"
                              data-testid="ButtonGroup"
                              role="radiogroup"
                            >
                              <button
                                aria-checked="false"
                                aria-label="Blue"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="w-5 h-5 mx-1 rounded bg-theme-info-600"
                                />
                              </button>
                              <button
                                aria-checked="true"
                                aria-label="Green"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="w-5 h-5 mx-1 rounded bg-theme-success-600"
                                />
                              </button>
                            </div>
                          </span>
                        </div>
                      </div>
                    </li>
                    <li
                      class="flex flex-col w-full pt-6"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex justify-between items-center"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col space-y-2 w-full"
                        >
                          <div
                            class="flex justify-between items-center space-x-5"
                          >
                            <span
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
                              data-testid="list-divided-item__label"
                            >
                              Viewing Mode
                            </span>
                          </div>
                          <span
                            class="text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700"
                            data-testid="list-divided-item__label--description"
                          >
                            Choose a light or dark viewing mode.
                          </span>
                        </div>
                        <div
                          class=""
                        >
                          <span
                            data-testid="list-divided-item__value"
                          >
                            <div
                              class="inline-flex items-center space-x-3 w-full"
                              data-testid="ButtonGroup"
                              role="radiogroup"
                            >
                              <button
                                aria-checked="true"
                                aria-label="light"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="flex items-center space-x-2 px-2"
                                >
                                  <div
                                    class="sc-bdfBwQ hjDozt dark:text-theme-secondary-600"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      light.svg
                                    </svg>
                                  </div>
                                  <span>
                                    Light
                                  </span>
                                </div>
                              </button>
                              <button
                                aria-checked="false"
                                aria-label="dark"
                                class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 jxvGuA"
                                data-testid="ButtonGroupOption"
                                role="radio"
                                type="button"
                              >
                                <div
                                  class="flex items-center space-x-2 px-2"
                                >
                                  <div
                                    class="sc-bdfBwQ hjDozt dark:text-theme-secondary-600"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      dark.svg
                                    </svg>
                                  </div>
                                  <span>
                                    Dark
                                  </span>
                                </div>
                              </button>
                            </div>
                          </span>
                        </div>
                      </div>
                    </li>
                  </ul>
                  <div
                    class="flex justify-end mt-8 space-x-3 w-full"
                  >
                    <button
                      class="OriginalButton__StyledButton-o0fs2j-0 guPjPB"
                      data-testid="AppearanceFooterButtons__cancel"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="OriginalButton__StyledButton-o0fs2j-0 dABsWA"
                      data-testid="AppearanceFooterButtons__save"
                      type="submit"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
